# wisty_audio_dsp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: gtest.cmake
include/buffer/: ring_buffer.h
include/lib/: data_type.h  error_enum.h
include/lib/audio/: audio_block.h  audio_buffer.h  audio_clip.h  audio_source.h  effect_chain.h
include/lib/binary/: wave.h
include/lib/buffer/: ring_buffer.h
include/lib/effect/: gain.h
include/lib/interface/: i_audio_clip.h  i_component.h  i_effect.h
include/lib/utils/: data_type.h  error_enum.h
include/private_header/: buffer_type.h
src/: CMakeLists.txt  test.cpp
src/audio/: audio_clip.cpp  audio_source.cpp
test/: CMakeLists.txt  test_audio_clip.cpp  test_dev.cpp  test_fx.cpp  test_ring_buffer.cpp
